Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1524

TNonBlockingServer does not compile in Visual Studio 2010

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.9
    • 0.9
    • C++ - Library
    • None
    • Windows XP, Visual Studio 2010

    Description

      Since Revision 1241171 TNonBlockingServer does not compile in Visual Studio 2010. The return value of ::close(SOCKET) is used in an comparison. This results in the following errors:

      ..\thrift\lib\cpp\src\server\tnonblockingserver.cpp(1270): error C2120
      ..\thrift\lib\cpp\src\server\tnonblockingserver.cpp(1279): error C2120

      Attachments

        1. close_call_namespace.patch
          3 kB
          Christian Taedcke
        2. THRIFT-1524.patch
          0.4 kB
          Christian Taedcke

        Activity

          People

            Unassigned Unassigned
            chrtae Christian Taedcke
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: