THRIFT-1524 TNonBlockingServer does not compile in Visual Studio 2010 Patch: Christian Taedcke

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1294819 13f79535-47bb-0310-9956-ffa450edef68